--- a/less/global.less
+++ b/less/global.less
@@ -55,3 +55,14 @@ button {
   width: 100%;
   margin: 0 auto;
 }
+
+body {
+  background-image: linear-gradient(
+    189deg,
+    rgba(34, 193, 195, 1) 0%,
+    rgba(89, 192, 158, 1) 29%,
+    rgba(150, 190, 116, 1) 46%,
+    rgba(209, 188, 75, 1) 77%,
+    rgba(253, 187, 45, 1) 100%
+  );
+}
