--- a/less/home-page.less
+++ b/less/home-page.less
@@ -4,6 +4,7 @@
   .intro {
     .header-img {
       max-width: 100%;
+      animation: bg 5s alternate infinite cubic-bezier(0.55, 0.085, 0.68, 0.53);
     }
     h2 {
       padding: 15px;
@@ -27,11 +28,7 @@
     }
 
     .media(
-      {
-        justify-content: center; 
-        img:first-child{width: 88%;}
-        img:not(:first-child){display: none;}
-      }
+      {justify-content: center; img:first-child{width: 88%;} img:not(:first-child){display: none;}}
     );
   }
 
@@ -52,7 +49,7 @@
     border-top: 1px solid @main-border-color;
     padding: 50px 60px;
     display: flex;
-    justify-content: center; 
+    justify-content: center;
 
     .walk-text {
       width: 50%;
@@ -70,12 +67,7 @@
         padding: 5px 25px;
         border-radius: 5px;
 
-        .media(
-          {
-            width:100%;
-            padding: 30px 25px;
-          }
-        );
+        .media({width: 100%; padding: 30px 25px;});
       }
     }
 
@@ -91,26 +83,9 @@
     }
 
     .media(
-      {
-        flex-direction: column-reverse;
-        padding: 30px 2.5%;
-      
-        .walk-text,
-        .walk-img{
-          width:100%;
-        }
-
-        .walk-img{
-          text-align:center;
-          margin-left:0;
-          margin-bottom:15px;
-
-          img{
-            width:94%;
-          }
-        }
-      }   
+      {flex-direction: column-reverse; padding: 30px 2.5%; .walk-text,
+      .walk-img{width: 100%;} .walk-img{text-align: center; margin-left: 0; margin-bottom:
+        15px; img{width: 94%;}}}
     );
-
   }
 } // home
