--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,3 +1,7 @@
+body {
+  padding-top: 80px;
+}
+
 // Navigation code here
 .navbar {
   .d-flex(column);
@@ -7,6 +11,17 @@
   color: @nav-font;
 
   height: 80px;
+
+  position: fixed;
+  z-index: 1;
+  opacity: 0.8;
+  width: 100%;
+  top: 0;
+
+  transition: opacity 1s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+  &:hover {
+    opacity: 1;
+  }
 
   .nav-item {
     padding: 0 15px;
